--- a/src/Failed.css
+++ b/src/Failed.css
@@ -5,31 +5,16 @@
 .MuiPaper-elevation4 {
   box-shadow: none !important;
 }
-.mainImg {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 40vh;
-  z-index: 11;
-}
 .container {
-  display: flex;
   background: rgb(238, 243, 248);
-  height: calc(100vh - 215px);
 }
 .child {
   display: flex;
-  flex-direction: column;
-  position: relative;
+  height: 73vh;
   align-items: center;
   justify-content: center;
-  margin: 25px auto;
-  padding: 20px;
-  background: rgb(238, 243, 248);
-  top: 32%;
+  flex-direction: column;
 }
-.button {
-  position: sticky;
-  bottom: 20px;
+.mainImg {
+  height: 50%;
 }
